kubernetes-files/django.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: status-page
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  namespace: status-page
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1  # At least one pod should be available
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: itayshlanger/status-page-prod:latest
        imagePullPolicy: Always
        ports:
         - containerPort: 8001
        readinessProbe:
          tcpSocket:
            port: 8001  
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: status-page
spec:
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
