kubernetes-files/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: status-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: itayshlanger/status-page-nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: status-page
spec:
  selector:
    app: status-page
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
