kubernetes-files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-ingress-rules
  namespace: status-page
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: "alb-ingress-noa-itay-prod"
    alb.ingress.kubernetes.io/ip-address-type: ipv4
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'  # Specifies HTTPS port
    alb.ingress.kubernetes.io/ssl-redirect: '443'  # Redirect HTTP to HTTPS
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:992382545251:certificate/d13ca700-aede-4566-970c-5474509700a6"
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/subnets: subnet-0843c8d7bd8f1f063,subnet-0cb8ffdcc5ade255a,subnet-015796b3041bd37e8
spec:
  ingressClassName: ingres-class
  rules:
    - host: grafana.itay-noa.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 443
    - host: statuspage.itay-noa.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 443
